fixes to referal modal z-index

--- a/src/assets/less/referral.less
+++ b/src/assets/less/referral.less
@@ -847,7 +847,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 9999;
+        z-index: 10001;
         justify-content: center;
         align-items: center;
         padding: (20/16rem);
